--- a/style.css
+++ b/style.css
@@ -5,8 +5,11 @@
     box-sizing: border-box;
 	background-color: #850202;
 }
-body {
-	background-color: darkred;
+/* 	royal blue: 0402AD
+	lannister red: 850202
+	gold: B1A906 */
+body 
+{
 	font-family: Garamond, serif;
 	color: darkyellow;
 }
@@ -24,6 +27,10 @@ header h1
 	text-align: center;
 	position: relative;
     margin: 0;
+	font-size: 80px;
+	font-style: italic;
+	font-weight: bold;
+	text-decoration: underline;
 }
 
 /* Styl nawigacji */
@@ -36,13 +43,24 @@ nav ul
 nav ul li /* elementy listy */
 {
     display: inline; /* elementy obok siebie */
-    margin-right: 60px;
+	margin-left: 30px;
+	margin-right: 30px;
 }
 
 nav ul li a /* styl linków */
 {
     color: #B1A906;
+	font-style: italic;
+	font-size: 2rem;
     text-decoration: none; /* usunięcie podkreślenia */
+}
+
+article /* boxy */
+{
+    padding: 20px;
+    border: 1px solid #B1A906;
+    margin-bottom: 20px;
+	color: white;
 }
 
 /* pasek boczny */
@@ -111,6 +129,7 @@ div ul li a /* styl linków */
         padding: 10px;
     }
 }
+
 a:visited,
 a:active,
 a 
